[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psynet"
version = "0.1.0"
description = "Psychometric network analysis toolkit for Python"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/psynet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
